--- a/src/themes/simplebootx/User/gh_log2.html
+++ b/src/themes/simplebootx/User/gh_log2.html
@@ -172,7 +172,7 @@
 	        pageCount:{$total_page},
 	        current:{$current_page},
 	        backFn:function(page){
-	        	$('body').load("{:U('Ttreat/gh_log2')}",{page:page});
+	        	$('body').load("{:U('Treat/gh_log2')}",{page:page});
 	        }
 	    });
 	});
