--- a/src/themes/simplebootx/User/gh_log5.html
+++ b/src/themes/simplebootx/User/gh_log5.html
@@ -165,7 +165,7 @@
 	        pageCount:{$total_page},
 	        current:{$current_page},
 	        backFn:function(page){
-	        	$('body').load("{:U('Ttreat/gh_log5')}",{page:page});
+	        	$('body').load("{:U('Treat/gh_log5')}",{page:page});
 	        }
 	    });
 	});
