--- a/src/themes/simplebootx/User/index.html
+++ b/src/themes/simplebootx/User/index.html
@@ -28,7 +28,7 @@
 		</div>
 	</div>
 	<div class="top">
-		<div class="top_left"><a href=""><img src="__PUBLIC__/images/logo.png" alt=""></a></div>
+		<div class="top_left"><a href="javascript:;"><img src="__PUBLIC__/images/logo.png" alt=""></a></div>
 		<div class="top_search">
 			<form action="" method="get" name="search">
 				<div class="option"><span>疾病</span></div>
@@ -37,8 +37,8 @@
 					<input type="submit" value="">
 				</div>
 				<div class="sbArea">
-					<a href=""><div>疾病</div></a>
-					<a href=""><div>医生</div></a>
+					<a href="javascript:;"><div>疾病</div></a>
+					<a href="javascript:;"><div>医生</div></a>
 					<!-- <a href=""><div>医院</div></a> -->
 				</div>
 			</form>
@@ -51,7 +51,7 @@
 				<li><a href="{:U('Xing/diseaseRegistered')}">按疾病挂号</a></li>
 				<li><a href="{:U('Xing/doctorRegistered')}">按医生挂号</a></li>
 				<li class="nav_color"><a href="{:U('Xing/visitTheTable')}">医生出诊表</a></li>
-				<li><a href="#">最新公告</a></li>
+				<li><a href="javascript:;">最新公告</a></li>
 				<!-- <li class="personalCenter"><a href="{:U('Xing/personalCenter')}">个人中心</a></li> -->
 				<li class="personalCenter"><a href="{:U('Login/index')}">个人中心</a></li>
 			</ul>
@@ -89,7 +89,7 @@
 				</ul>
 				<p class="index_top_nav_p">
 					<i class="i_t_qt"></i>
-					<span class="i_t_s13"><a href="#" class="index_top_a_none">其他科室</a></span>
+					<span class="i_t_s13"><a href="javascript:;" class="index_top_a_none">其他科室</a></span>
 				</p>
 			</div>
 		</div>
@@ -98,9 +98,9 @@
 			<div class="index-ad">
 			    <div class="mads">
 			        <ul class="bxslider">
-			            <li><a href="#"><img src="__PUBLIC__/images/ad_1.jpg" alt=""></a></li>
-			            <li><a href="#"><img src="__PUBLIC__/images/ad_2.jpg" alt=""></a></li>
-			            <li><a href="#"><img src="__PUBLIC__/images/ad_3.jpg" alt=""></a></li>
+			            <li><a href="javascript:;"><img src="__PUBLIC__/images/ad_1.jpg" alt=""></a></li>
+			            <li><a href="javascript:;"><img src="__PUBLIC__/images/ad_2.jpg" alt=""></a></li>
+			            <li><a href="javascript:;"><img src="__PUBLIC__/images/ad_3.jpg" alt=""></a></li>
 			        </ul>
 			    </div>
 			</div>
@@ -120,16 +120,16 @@
 						<option value="">请选择疾病</option>
 					</select></p>
 					<p><select name="doctor_id" id="" class="subscribe_p_select doctorselect"><option value="">请选择医生</option></select></p>
-					<a href="#" class="ksbz_kscx">快速查询</a>
+					<a href="javascript:;" class="ksbz_kscx">快速查询</a>
 				</form>
 			</div>
 			<div class="ksbz_help">
 				<h2><span>帮助中心</span></h2>
 				<div class="ksbz_help_an">
-					<a href="#" target="_blank" class="ksbz_h_a">账号指南</a>
-					<a href="#" target="_blank" class="ksbz_h_a">预约指南</a>
-					<a href="#" target="_blank" class="ksbz_h_a">账号找回</a>
-					<a href="#" target="_blank" class="ksbz_h_a">常见问题</a>
+					<a href="javascript:;" target="_blank" class="ksbz_h_a">账号指南</a>
+					<a href="javascript:;" target="_blank" class="ksbz_h_a">预约指南</a>
+					<a href="javascript:;" target="_blank" class="ksbz_h_a">账号找回</a>
+					<a href="javascript:;" target="_blank" class="ksbz_h_a">常见问题</a>
 				</div>
 			</div>
 		</div>
@@ -146,9 +146,9 @@
 						<div class="imagebox"><img src="__PUBLIC__/images/medicine_guide.jpg" alt=""></div>
 						<p><em> 欢迎我省各级医院肾脏病医护人员、血液净化、营养专业人员及研究生积极参与！</em></p>
 						<p class="guide_text">
-							<a href="#"> 山西省第十三届肾脏病学术年会</a>
+							<a href="javascript:;"> 山西省第十三届肾脏病学术年会</a>
 							 暨第五届黄河论坛、第三届中原论坛会议定于2016年10月21日~23日在山西省人民医院（太原市双塔寺街29号）举行。届时将邀请国内外知名的肾脏病学家进行专题讲座。会议将围绕“急性肾损伤（
-							 <a href="#"><strong>AKI</strong></a>
+							 <a href="javascript:;"><strong>AKI</strong></a>
 							  ）防治”这一主题，对临床常见肾脏病的诊断、治疗及预防进行学术交流，总结肾脏病学的临床和基础研究经验，旨在推动我省肾脏病学的交流和肾脏病工作的深入开展。
 						</p>
 					</div>		
@@ -159,14 +159,14 @@
 				<div class="medicine_news">
 					<p><em>时刻关注医院新闻，了解医院最新动态</em></p> 
 		            <ul class="templatemo_list">
-		                <li class="flow"><a href="#">我院举办世界关节炎日暨骨质疏松日义诊活动</a></li>
-		                <li class="flow"><a href="#">省委任命张晓清同志担任我院党委书记</a></li>
-		                <li class="flow"><a href="#">我院关于招聘聘用制护士的通知</a></li>
-		                <li class="flow"><a href="#">敬老月难忘前辈 送温暖传递真情</a></li>
-		                <li class="flow"><a href="#">我院开展全国高血压日暨重阳节爱心义诊活动</a></li>
-		                <li class="flow"><a href="#">二十五载春秋割舍不断日本客人对省医的情怀</a></li>
-		                <li class="flow"><a href="#">李荣山院长率队到医务处指导调研</a></li>
-		                <li class="flow"><a href="#">我院获省卫计委离退休人员健身舞比赛金奖</a></li>
+		                <li class="flow"><a href="javascript:;">我院举办世界关节炎日暨骨质疏松日义诊活动</a></li>
+		                <li class="flow"><a href="javascript:;">省委任命张晓清同志担任我院党委书记</a></li>
+		                <li class="flow"><a href="javascript:;">我院关于招聘聘用制护士的通知</a></li>
+		                <li class="flow"><a href="javascript:;">敬老月难忘前辈 送温暖传递真情</a></li>
+		                <li class="flow"><a href="javascript:;">我院开展全国高血压日暨重阳节爱心义诊活动</a></li>
+		                <li class="flow"><a href="javascript:;">二十五载春秋割舍不断日本客人对省医的情怀</a></li>
+		                <li class="flow"><a href="javascript:;">李荣山院长率队到医务处指导调研</a></li>
+		                <li class="flow"><a href="javascript:;">我院获省卫计委离退休人员健身舞比赛金奖</a></li>
 		            </ul>
 				</div>
 				<!-- <div>
@@ -181,33 +181,33 @@
 					<a href="#">更多</a>
 				</div>
 				<ul class="index_new_gul">
-					<li><a href="#">【重要】山西省医药分开综合改革...</a></li>
-					<li><a href="#">北京大学人民医院调整放号周期的...</a></li>
-					<li><a href="#">山西胸科医院暂停更新号源通知</a></li>
-					<li><a href="#">系统检修暂停服务的公告</a></li>
-					<li><a href="#">北京市大兴区红星医院变更通告</a></li>
-					<li><a href="#">openssh版本升级通知</a></li>
+					<li><a href="javascript:;">【重要】山西省医药分开综合改革...</a></li>
+					<li><a href="javascript:;">北京大学人民医院调整放号周期的...</a></li>
+					<li><a href="javascript:;">山西胸科医院暂停更新号源通知</a></li>
+					<li><a href="javascript:;">系统检修暂停服务的公告</a></li>
+					<li><a href="javascript:;">北京市大兴区红星医院变更通告</a></li>
+					<li><a href="javascript:;">openssh版本升级通知</a></li>
 				</ul>
 			</div>
 			<div class="index_tz_gg">
 				<div class="index_tz_gg_title">
 					<h2>停诊公告</h2>
-					<a href="#">更多</a>
+					<a href="javascript:;">更多</a>
 				</div>
 				<ul class="index_tz_gul">
-					<li><a href="#">解放军第302医院肝病内科酒药...</a></li>
-					<li><a href="#">解放军第302医院肝病内科酒药...</a></li>
-					<li><a href="#">山西儿科研究所附属儿童医院普通......</a></li>
-					<li><a href="#">山西肿瘤医院疼痛与睡眠停诊公告...</a></li>
-					<li><a href="#">山西肿瘤医院疼痛与睡眠停诊公告...</a></li>
-					<li><a href="#">山西肿瘤医院疼痛与睡眠停诊公告...</a></li>
+					<li><a href="javascript:;">解放军第302医院肝病内科酒药...</a></li>
+					<li><a href="javascript:;">解放军第302医院肝病内科酒药...</a></li>
+					<li><a href="javascript:;">山西儿科研究所附属儿童医院普通......</a></li>
+					<li><a href="javascript:;">山西肿瘤医院疼痛与睡眠停诊公告...</a></li>
+					<li><a href="javascript:;">山西肿瘤医院疼痛与睡眠停诊公告...</a></li>
+					<li><a href="javascript:;">山西肿瘤医院疼痛与睡眠停诊公告...</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
 	<!-- 底部 -->
 	<div class="index_footer">
-		<div class="templatemo_footer">Copyright © 2048 <a href="#">山西省医院</a> | Template from wuxin</div>
+		<div class="templatemo_footer">Copyright © 2048 <a href="javascript:;">山西省医院</a> | Template from wuxin</div>
 	</div>
 </body>
 <script src="__PUBLIC__/js/jquery-1.9.1.min.js"></script>
