--- a/src/themes/simplebootx/User/safety.html
+++ b/src/themes/simplebootx/User/safety.html
@@ -106,7 +106,7 @@
 <script src="__PUBLIC__/js/bootstrap.min.js"></script>
 <script src="__PUBLIC__/js/noty/noty.js"></script>
 <script>
-	tableContentHeight($(".personalBox"));
+	// tableContentHeight($(".personalBox"));
 	$(function(){
 		$(".nav-tabs>li>a.safety").tab("show");
 	});
